# read-and-chat

./: LICENSE  README.md  chat_template.py  pyproject.toml
read_and_chat/: __init__.py  main.py  main_cli.py
