[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "read-and-chat"
version = "0.0.1"
description = "Using text recognition for a ChatGPT prompt"
readme = "README.md"
requires-python = ">=3.8"
license = {file = "LICENSE"}
keywords = []
authors = [
  {name = "Timothy Niko"},
  {name = "John Hoffer"},
  {name = "Kevin Hill"},
  {name = "Tyler Malka"}
]
maintainers = [
  {name = "John Hoffer", email = "john@hoff.in"}
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Programming Language :: Python"
]

dependencies = [
]

[project.urls]
Repository = "https://github.com/hssrobotics23/read-and-chat.git"

[project.scripts]
read-and-chat = "read_and_chat:main_cli"
